# dingding-bot

./: .gitignore  INSTALL.md  README.md  config.example  cron_helper.py  deploy.sh  install.sh  main.py  optimization_summary.md  pyproject.toml  rain_chart_preview.md  run.py  task_manager.py  test_caiyun_rain_chart.py  weather-bot.service
src/: __init__.py  config.py  dingtalk.py  formatter.py  hotsearch.py  hotsearch_formatter.py  rain_visualizer.py  scheduler.py  weather.py
src/base/: __init__.py  task_base.py  task_manager.py
src/tasks/: __init__.py  hotsearch_task.py  weather_task.py
