[project]
name = "dingding"
version = "0.1.0"
description = "Multi-task notification bot for DingTalk with weather, hot search and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "croniter>=2.0.0",
    "apscheduler>=3.10.0"
]

[project.optional-dependencies]
# 图形依赖 - 可选安装，服务器环境可以跳过
graphics = [
    "matplotlib>=3.5.0,<3.7.0",
    "numpy>=1.21.0,<1.24.0"
]

# 兼容老版本C++编译器的图形依赖
graphics-legacy = [
    "matplotlib>=3.2.0,<3.5.0",
    "numpy>=1.19.0,<1.21.0"
]
